# LLM-Powered-Research-Workflow-Automation-Tool

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  app.py  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: citation_extractor.py  cross_compare.py  pdf_processor.py  rag_pipeline.py  summarizer.py
db/: database.py  models.py
db/migrations/: env.py
docs/superpowers/specs/: 2026-04-13-research-workflow-tool-design.md
pages/: 01_Upload_Papers.py  02_Literature_Review.py  03_Notes_Manager.py  04_Citations.py  05_Reports.py
tests/: conftest.py  test_citation_extractor.py  test_cross_compare.py  test_db.py  test_pdf_processor.py  test_rag_pipeline.py  test_summarizer.py
utils/: config.py  logging_config.py
