[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "research-workflow-tool"
version = "1.0.0"
description = "LLM-Powered Research Workflow Automation Tool"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "db", "utils"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
